--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=order-service
+server.port=4001
+#server.port=4008
+
+# UNCOMMENT TO USE IN-MEMORY DATABASE OUTSIDE OF DOCKER
+#spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:mem:order
+#spring.datasource.driver-class-name=org.h2.Driver
+#
+#spring.datasource.username=admin_viewer
+#spring.datasource.password=password
+#
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.sql.init.mode=always
+
+#product.service.url=http://localhost:4000
+product.service.url=${PRODUCT_SERVICE_URL}
+#docker
