--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=user-service
 spring.security.user.name=admin
 spring.security.user.password=password
 server.port=4002
-
+#spring.profiles.active=test
 #spring.datasource.url=jdbc:postgres://user-service-db:5432/userservicedb
 #spring.datasource.username=admin_user
 #spring.datasource.password=password
@@ -10,7 +10,7 @@ server.port=4002
 #spring.jpa.hibernate.ddl-auto=update
 #
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.driver-class-name=org.h2.Driver
 
 spring.datasource.username=admin_viewer
 spring.datasource.password=password
