--- a/user-service/src/main/resources/bootstrap.yaml
+++ b/user-service/src/main/resources/bootstrap.yaml
@@ -1,3 +1,11 @@
 spring:
   application:
-    name: user-service
+    name: userservice
+#  cloud:
+#    config:
+#      enabled: false
+  profiles:
+    active: prod
+  #uncomment below two lines to get config from remote git repository
+  config:
+    import: optional:configserver:http://localhost:8888
